<resources>
    <string name="app_name">智慧社区</string>
    <string name="wuguan">物管</string>
    <string name="weishenghuo">微生活</string>
    <string name="zhineng">智能</string>
    <string name="wode">我的</string>
    <string name="no_login">未登录</string>
    <string name="login">登  录</string>
    <string name="login_success">登录成功</string>
    <string name="house_interflow">户户通</string>
    <string name="repair">报修</string>
    <string name="suggestion_box">意见箱</string>
    <string name="phone_manage">呼叫物管</string>
    <string name="integral">积分</string>
    <string name="home_escrow">房屋代管</string>
    <string name="pay_service">缴费服务</string>
    <string name="pay_phone_service">缴纳电话费</string>
    <string name="pay_wuye_service">缴纳物业费</string>
    <string name="pay_widebind_service">缴纳宽带费</string>
    <string name="pay_history_list">历史账单</string>
    <string name="pay_detail">清单明细</string>
    <string name="pay_now">立即支付</string>
    <string name="tip_to_update">版本有更新，请下载</string>
    <string name="auto_login">自动登录</string>
    <string name="no">取消</string>
    <string name="shequ_cinema">社区影院</string>
    <string name="tuangou_pingdan">团购\n拼单</string>
    <string name="zhoubian_shanquan">周边\n商圈</string>
    <string name="jiaohuan_kongjian">交换\n空间</string>
    <string name="shaishenghuo">晒\n生活</string>
    <string name="account">账号</string>
    <string name="account2">账　　号</string>
    <string name="order_manage">订单管理</string>
    <string name="my_order">我的订单</string>
    <string name="order_pay">已付款</string>
    <string name="order_unpay">待付款</string>
    <string name="member_manage">成员管理</string>
    <string name="community_manage">小区管理</string>
    <string name="changhong">长虹世纪城</string>
    <string name="remove_community">解除绑定</string>
    <string name="erweima_saomiao">二维码扫描</string>
    <string name="app_manage">应用管理</string>
    <string name="setting">设置</string>
    <string name="setting2">设　　置</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="feed_back_submit">提交</string>
    <string name="default_editfeedback">相信有了您的建议，我们会做的更好</string>
    <string name="dimension_edit">欢迎体验   智慧社区</string>
    <string name="select_city">选择城市</string>
    <string name="select_community">选择小区</string>
    <string name="search_community">搜索小区</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register_30">30秒注册</string>
    <string name="register">注册</string>
    <string name="pwd_same">两次密码必须相同</string>
    <string name="modify_pwd_success">密码修改成功</string>
    <string name="params_error">参数错误</string>
    <string name="valicode_error">验证码错误</string>
    <string name="user_not_exit">用户不存在</string>
    <string name="user_not_activate">用户未激活</string>
    <string name="pwd_error">密码错误</string>
    <string name="modify_pwd_error">密码修改失败</string>
    <string name="old_pwd_error">原密码错误</string>
    <string name="input_your_phonenumber">请输入您的手机号码</string>
    <string name="check_phone">手机号码格式不对</string>
    <string name="input_your_phonenumber2">小区业主输入物管备案时的手机号码</string>
    <string name="getValicode">获取验证码</string>
    <string name="input_valicode">请输入验证码</string>
    <string name="accept_agreement">我接受服务协议</string>
    <string name="register_over">完成注册</string>
    <string name="start_register">开始注册</string>
    <string name="settingPwd">设置密码</string>
    <string name="pwd_length">密码长度为6-15位字符</string>
    <string name="pwd_length_default">默认为手机号后六位</string>
    <string name="salutation">称　　谓</string>
    <string name="gentlemen">先生</string>
    <string name="lady">女士</string>
    <string name="please_accept_agreement">请接受服务协议</string>
    <string name="nickName">昵称</string>
    <string name="today_recommend">今日推荐</string>
    <string name="username">用户名</string>
    <string name="pwd">密　码</string>
    <string name="app_noinstall">未安装</string>
    <string name="app_installed">已安装</string>
    <string name="uninstall">卸载</string>
    <string name="update">更新</string>
    <string name="down">安装</string>
    <string name="update_info_success">修改成功</string>
    <string name="tip_authentication">\u3000\u3000对不起,您未通过本小区认证!请确保手机号码与物管预留号码一致;或输入已通过认证的家庭成员手机号获得授权!</string>
    <string name="person_info">个人信息</string>
    <string name="header">头像</string>
    <string name="account_mine">账号</string>
    <string name="common_address">常住小区</string>
    <string name="sex_mine">性别</string>
    <string name="search">搜 索</string>
    <string name="msg_tip">消息提示</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存信息</string>
    <string name="please_select_msgtype">请选择拒收信息类型</string>
    <string name="zhoubianshanquan">周边商圈</string>
    <string name="pay">缴费</string>
    <string name="tuangoupingdan">团购拼单</string>
    <string name="IPP">IPP号</string>
    <string name="modify_pwd">修改密码</string>
    <string name="unbind">未绑定</string>
    <string name="has_bind">已绑定</string>
    <string name="save">保存</string>
    <string name="tip_modify_accout_01">亲,账号命名只能变更一次哦</string>
    <string name="tip_modify_accout_02">必须以字母开头,支持6-20个字母、数字、下划线和减号</string>
    <string name="warn_update_account">账号只能修改一次,确定修改?</string>
    <string name="modify_account">修改账号</string>
    <string name="my_account">我的账号</string>
    <string name="tip_modify_phone">如果你当时的手机号码不再使用了,请及时来这里更换手机号码。</string>
    <string name="current_phone">您当前的手机号为 : </string>
    <string name="please_input_phone">请输入手机号 </string>
    <string name="please_input_valicode">请输入验证码 </string>
    <string name="get_valicode">获取验证码 </string>
    <string name="bind">绑定</string>
    <string name="bind_phone">变更手机号</string>
    <string name="bind_phone_error">绑定失败！请确保您输入的验证码跟你收到的短信验证码一致。</string>
    <string name="i_know">我知道了</string>
    <string name="bind_ipp">绑定IPP号</string>
    <string name="what_ipp">什么是IPP？</string>
    <string name="please_input_ipp">请输入IPP号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="no_ipp">去注册IPP号</string>
    <string name="more_group">更多圈子</string>
    <string name="complete">完成</string>
    <string name="shouquangei">授权给</string>
    <string name="cancel_shouquangei">取消授权</string>
    <string name="please_input_old_pwd">请输入原始密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_new_pwd_again">请重复新密码</string>
    <string name="warn_modify_pwd">请不要输入特殊字符*、/\~!^</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="tip_retrieve_pwd">请输入您注册时登记的手机号码,我们将发送一条短信到您的手机,请根据提示修改您的密码。</string>
    <string name="accept">接受</string>
    <string name="ignore">忽略</string>
    <string name="has_accept">已接受</string>
    <string name="has_ignore">已忽略</string>
    <string name="new_member">新成员</string>
    <string name="please_select_room">请选择房间号</string>
    <string name="authorization_to">授权给</string>
    <string name="apply_join">申请加入</string>
    <string name="apply_join_tip1">请输入备案/授权的手机号码</string>
    <string name="apply_join_tip2">备案手机号码:房子的主人在物管登记的号码,此号码可以直接关联房屋。也可以输入房子主人授权的管理员手机号码。</string>
    <string name="please_fill_in_full">请填写完整数据</string>
    <string name="register_success_tip1">您好,%1$s%2$s,欢迎回家!</string>
    <string name="register_success_tip2">您好,%1$s%2$s,欢迎加入%3$s</string>
    <string name="apply_join_success">申请成功等待审核~</string>
    <string name="apply_join_of_owner_success">绑定成功~</string>
    <string name="apply_join_failed">申请失败~</string>
    <string name="member_count">有%1$s个新成员申请加入</string>
    <string name="permit_success">授权成功~</string>
    <string name="cancel_permit_success">已取消授权~</string>
    <string name="modify_person_info_success">修改成功~</string>
    <string name="next">下一步</string>
    <string name="join">加入</string>
    <string name="click_to_modify_head">点击更改头像</string>
    <string name="promanage_notice">物管通知</string>
    <string-array name="array_msg_tip">
        <item>保修</item>
        <item>周边商圈</item>
        <item>缴费</item>
        <item>团购拼单</item>
        <item>晒生活</item>
        <item>交换空间</item>
        <item>意见箱</item>
        <item>应用程序更新</item>
    </string-array>
    <string name="sure_to_clear_all_content">确定清空所有内容?</string>
    <string name="sure_to_clear_this_privateletter">确定删除此条私信?</string>
    <string name="wyff_title">物业服务</string>
    <string name="wyff_tab_1">报修服务</string>
    <string name="wyff_tab_2">投诉建议</string>
    <string name="wyff_tab_1_group_1">服务中</string>
    <string name="wyff_tab_1_group_2">服务记录</string>
    <string name="wyff_tab_1_group_2_clear">清空</string>
    <string name="wyff_tab_1_group_p1">服务进度</string>
    <string name="wyff_tab_1_group_p2">已登记...</string>
    <string name="wyff_tab_1_group_2_1">登记</string>
    <string name="wyff_tab_1_group_2_2">受理</string>
    <string name="wyff_tab_1_group_2_3">反馈</string>
    <string name="wyff_tab_1_group_2_4">评价</string>
    <string name="wyff_tab_2_group_1">处理中</string>
    <string name="wyff_tab_2_group_2">处理记录</string>
    <string name="wyff_tab_1_bnt">我要报修</string>
    <string name="wyff_tab_2_bnt">我要投诉</string>
    <string name="bx_detail_title">报修详情</string>
    <string name="bx_detail_wt">报修问题</string>
    <string name="bx_detail_jd">报修进度</string>
    <string name="bx_detail_lxfs">联系方式</string>
    <string name="bx_detail_wxry">维修人员:</string>
    <string name="bx_detail_lxdh">联系电话:</string>
    <string name="bx_detail_fwpj">服务评价</string>
    <string name="bx_detail_pl_hint">请输入评论内容（必填）</string>
    <string name="bx_detail_not_pl_hint">亲，只有已完成的服务才能评价哦</string>
    <string name="ts_detail_title">投诉详情</string>
    <string name="ts_detail_wt">投诉问题</string>
    <string name="ts_detail_fwjd">服务进度</string>
    <string name="ts_detail_cljd">处理进度</string>
    <string name="ts_detail_wydf">物业答复</string>
    <string name="sendpinglin">发表评论</string>
    <string name="gallery">从相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="take_bx">请输入报修事项</string>
    <string name="take_ts">请输入投诉内容</string>
    <string name="bx_notnull">报修事项不能为空</string>
    <string name="bx_phonenotnull">报修人手机号不能为空</string>
    <string name="type_sd">水电</string>
    <string name="type_jz">建筑</string>
    <string name="type_hjws">环境卫生</string>
    <string name="type_lb">请选择一个类别</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="bx_half_1_text">来张现场事故照片吧~</string>
    <string name="bx_half_4_text">看看他们怎么拍的</string>
    <string name="house_escrow">房屋代管</string>
    <string name="house_sk">请输入房屋装修情况,如精装/清水房</string>
    <string name="house_jgqj">价格区间</string>
    <string name="house_zxms">装修描述</string>
    <string name="house_dgcz">代管出租</string>
    <string name="house_dgcs">代管出售</string>
    <string name="house_submit">提交申请</string>
    <string name="house_rbsend">代管出租</string>
    <string name="house_rbsell">代管出售</string>
    <string name="house_update">修改</string>
    <string name="house_over1">房号 : </string>
    <string name="house_over2">租金 : </string>
    <string name="house_over3">租期 : </string>
    <string name="house_over4">押金 : </string>
    <string name="house_over5">房款交付方式 : </string>
    <string name="house_over6">租客姓名 : </string>
    <string name="house_over7">联系方式 : </string>
    <string name="house_goonsuccess">代管成功 ！</string>
    <string name="house_exitsuccess">取消成功 ！</string>
    <string name="interact_share_private_letter_text">私信</string>
    <string name="common_pagetip_deleting">正在删除……</string>
    <string name="contact_numb">手机号</string>
    <string name="pay_confirm">支付确认</string>
    <string name="pay_confirm_tip1">您将支付</string>
    <string name="pay_confirm_tip2">元,请选择支付方式：</string>
    <string name="pay_confirm_type_union">银联支付</string>
    <string name="pay_confirm_type_alipay">手机支付宝</string>
    <string name="pay_confirm_type_community">社区一卡通</string>
    <string name="dialog_cancel">取消</string>
    <string name="exchange_success">兑换成功！</string>
    <string name="get_gift1">请保管好兑换码</string>
    <string name="get_gift2">,至物管处领取物品</string>
</resources>