<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tip_dialog_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exchange_success"
        android:textColor="@color/gray_5f5f5f"
        android:textSize="@dimen/font_size_btnstartregister" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TextView
            style="@style/TextViewIntegrationLittleTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_gift1" />

        <TextView
            android:id="@+id/exchangeCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/deep_red"
            android:textSize="16sp" />

        <TextView
            style="@style/TextViewIntegrationLittleTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_gift2" />
    </LinearLayout>

</LinearLayout>