<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_content_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            style="@style/title_center_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_account" />

        <TextView
            android:id="@+id/tvSave"
            style="@style/title_right_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <ImageView
            android:id="@+id/imgBack"
            style="@style/title_left_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/view_common_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_modify_accout_01"
                android:textColor="@color/red"
                android:textSize="@dimen/font_size_content_common" />

            <EditText
                android:id="@+id/editAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_common_item_margin_bottom"
                android:layout_marginTop="@dimen/view_common_item_margin_bottom"
                android:background="@drawable/modify_account_input"
                android:ems="10"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:textSize="@dimen/font_size_content_common" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_modify_accout_02"
                android:textColor="@color/color_949494"
                android:textSize="@dimen/font_size_content_common" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>