<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_content_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <ImageView
            android:id="@+id/imgBack"
            style="@style/title_left_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/title_center_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_join" />

        <Button
            android:id="@+id/btnBind"
            style="@style/title_right_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/page_bg"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/apply_join_tip1"
            android:textColor="@color/color_5f5f5f"
            android:textSize="@dimen/font_size_content_common" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_apply_join"
            android:ems="10"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:textColor="@color/color_919191"
            android:textSize="@dimen/font_size_content_common" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_join_tip2"
            android:textColor="@color/color_919191"
            android:textSize="@dimen/font_size_content_common" />
    </LinearLayout>

</LinearLayout>