<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/order_pay_dialog_bg" >

    <TextView
        android:id="@+id/comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:text="@string/pay_confirm"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:id="@+id/pay_tip_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_title"
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/pay_confirm_tip1"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/pub_content_size" />

            <TextView
                android:id="@+id/pay_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="22"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/pub_content_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/pay_confirm_tip2"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/pub_content_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/union_pay_ll"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/order_pay_type_bg"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/union_pay_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:maxLines="1"
                    android:text="@string/pay_confirm_type_union"
                    android:textColor="@color/share_detail_title_color"
                    android:textSize="@dimen/pub_content_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alipay_pay_ll"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1.0"
                android:background="@drawable/order_pay_type_bg"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/alipay_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:maxLines="1"
                    android:text="@string/pay_confirm_type_alipay"
                    android:textColor="@color/share_detail_title_color"
                    android:textSize="@dimen/pub_content_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/community_pay_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:orientation="horizontal"
             >


            
            <LinearLayout
                android:id="@+id/union_pay_ll"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/order_pay_type_bg"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:maxLines="1"
                    android:text="@string/pay_confirm_type_community"
                    android:textColor="@color/share_detail_title_color"
                    android:textSize="@dimen/pub_content_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1.0"
                android:padding="10dip" >

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/pay_cancel_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pay_tip_ll"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:text="@string/dialog_cancel"
        android:textColor="@color/red_color"
        android:textSize="@dimen/title_size" />

</RelativeLayout>