<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back"
            android:clickable="true" />

        <TextView
            android:id="@+id/suggestion_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/suggestion_feedback"
            android:textColor="@color/color_5f5f5f"
            android:textSize="@dimen/font_size_title" >
        </TextView>

        <TextView
            android:id="@+id/submit_feedBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:text="@string/feed_back_submit"
            android:textColor="@color/color_5f5f5f"
            android:textSize="@dimen/font_size_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/feedBackText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_feedback"
            android:gravity="top"
            android:hint="@string/default_editfeedback"
            android:padding="20dp"
            android:textColor="@color/color_949494"
            android:textSize="@dimen/font_size_text_register02" >
        </EditText>
    </RelativeLayout>

</RelativeLayout>